--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,10 +4,7 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   install:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
