add: alias.sh & bashrc.sh #11 (#12)
* add: alias.sh & bashrc.sh #11

* update: bashrc & alias #11

* update: インストール処理の更新とbashrc部分を追加 #11

* update: icdiff をインストール対象から削除した

同じような diff ツールである delta がすでにインストール対象になっているため

* fix: README.md

* update: mac os でのテストを削除

まあmacは持っているけど開発には使わないからいいかなということで

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,13 @@ on: [push, pull_request, workflow_dispatch]
 
 jobs:
   install:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest]
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
 
       - name: Install
         run: |
+          set -e
           bash install.sh
+          source ~/.bashrc
