--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           set -e
           ./install.sh
-          source ~/.bashrc
+          exec bash -l
           # Homebrewと、Homebrewでインストールしたコマンド(の内1つ)が存在するか確認する
           type brew
           type bat
@@ -22,6 +22,7 @@ jobs:
         run: |
           set -e
           ./uninstall.sh
+          exec bash -l
           # Homebrewと、Homebrewでインストールしたコマンド(の内1つ)が存在していないこと確認する
           if type brew &>/dev/null; then false; fi
           if type bat &>/dev/null; then false; fi
