--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,5 +12,17 @@ jobs:
       - name: Install
         run: |
           set -e
-          bash install.sh
-          source ~/.bashrc
+          ./install.sh
+          exec bash -l
+          # Homebrewと、Homebrewでインストールしたコマンド(の内1つ)が存在するか確認する
+          type brew
+          type bat
+
+      - name: Uninstall
+        run: |
+          set -e
+          ./uninstall.sh
+          exec bash -l
+          # Homebrewと、Homebrewでインストールしたコマンド(の内1つ)が存在していないこと確認する
+          if type brew &>/dev/null; then false; fi
+          if type bat &>/dev/null; then false; fi
