update: dotfiles のディレクトリを参照するための環境変数を設定した #50

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,19 @@ jobs:
           type brew
           type bat
 
+      - name: Update
+        run: |
+          set -e
+          ${DOTFILES_DIRECTORY}/install.sh
+          exec bash -l
+          # Homebrewと、Homebrewでインストールしたコマンド(の内1つ)が存在するか確認する
+          type brew
+          type bat
+
       - name: Uninstall
         run: |
           set -e
-          ./uninstall.sh
+          ${DOTFILES_DIRECTORY}/uninstall.sh
           exec bash -l
           # Homebrewと、Homebrewでインストールしたコマンド(の内1つ)が存在していないこと確認する
           if type brew &>/dev/null; then false; fi
