--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           if [ "${{ matrix.container }}" = "rockylinux:9" ]; then
             dnf -y install git
           elif [ "${{ matrix.container }}" = "ubuntu:latest" ]; then
-            apt-get update && apt-get -y install git
+            apt-get update && apt-get -y install git curl
           fi
 
       - name: Install
