fix: RockyLinux9でインストールできない問題を修正

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           if [ "${{ matrix.container }}" = "rockylinux:9" ]; then
             dnf groupinstall -y "Development Tools"
-            dnf install -y procps-ng curl file git
+            dnf install -y --allowerasing procps-ng curl file git
           elif [ "${{ matrix.container }}" = "ubuntu:latest" ]; then
             apt-get update && apt-get install -y build-essential procps curl file git
           fi
