--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -23,20 +23,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: format check
-        if: ${{ github.event_name == 'pull_request' }}
-        uses: EPMatt/reviewdog-action-prettier@v1
+      - uses: actions/setup-node@v4
         with:
-          reporter: github-pr-review
-          filter_mode: nofilter
-          fail_on_error: "true"
-          prettier_flags: "**/*.{json,md,yml}"
-
+          node-version: "lts/*"
+      - name: Install prettier
+        run: npm install -g prettier
       - name: Run the prettier
-        if: ${{ github.event_name != 'pull_request' }}
-        uses: creyD/prettier_action@v4.3
-        with:
-          prettier_options: --write "**/*.{json,md,yml}"
+        run: prettier --write "**/*.{json,md,yml}"
       - name: Check for changes
-        if: ${{ github.event_name != 'pull_request' }}
         run: git diff --exit-code
