--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -15,6 +15,7 @@ jobs:
         uses: luizm/action-sh-checker@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SHELLCHECK_OPTS: --exclude=SC1090,SC1091,SC2046
         with:
           sh_checker_comment: true
 
