feat: Dev Containerでインストールされる拡張機能を追加する

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,7 +19,11 @@
   // Configure tool-specific properties.
   "customizations": {
     "vscode": {
-      "extensions": ["foxundermoon.shell-format", "timonwong.shellcheck"]
+      "extensions": [
+        "esbenp.prettier-vscode",
+        "foxundermoon.shell-format",
+        "timonwong.shellcheck"
+      ]
     }
   }
 
