--- a/.github/workflows/spell.yml
+++ b/.github/workflows/spell.yml
@@ -19,12 +19,24 @@ jobs:
       - run: npm install -g cspell
       - name: Spell check with reviewdog
         if: ${{ github.event_name == 'pull_request' }}
-        run: cspell spellcheck | reviewdog -efm="%f:%l:%c - %m" -reporter=github-pr-review -filter-mode=nofilter -fail-on-error=true
+        run: cspell . | reviewdog -efm="%f:%l:%c - %m" -reporter=github-pr-review -filter-mode=nofilter -fail-on-error=true
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Spell check without reviewdog
         if: ${{ github.event_name != 'pull_request' }}
         run: cspell .
+
+  file-name:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "lts/*"
+      - uses: reviewdog/action-setup@v1
+      - run: npm install -g cspell
       - name: Spell check of file name
         # ファイル名のチェックなので、Reviewdog は使えないため、Pull requestでもPushでも同じ処理を行う
-        run: cspell check <(git ls-files)
+        run: cspell check --color <(git ls-files)
