--- a/starship.toml
+++ b/starship.toml
@@ -31,6 +31,7 @@ symbol = " "
 
 [crystal]
 format = ", [$symbol($version)]($style)"
+symbol = " "
 
 [daml]
 format = ", [$symbol($version)]($style)"
@@ -43,7 +44,7 @@ symbol = " "
 format = ", [$symbol($version)]($style)"
 
 [directory]
-read_only = " "
+read_only = " 󰌾"
 
 [docker_context]
 format = ", [$symbol$context]($style)"
@@ -62,6 +63,12 @@ symbol = " "
 
 [erlang]
 format = ", [$symbol($version)]($style)"
+
+[fennel]
+symbol = " "
+
+[fossil_branch]
+symbol = " "
 
 [gcloud]
 format = ", [$symbol$account(@$domain)(\\($region\\))]($style)"
@@ -92,7 +99,7 @@ symbol = " "
 
 [haxe]
 format = ", [$symbol($version)]($style)"
-symbol = "⌘ "
+symbol = " "
 
 [helm]
 format = ", [$symbol($version)]($style)"
@@ -103,6 +110,7 @@ symbol = " "
 
 [hostname]
 ssh_only = false
+ssh_symbol = " "
 
 [java]
 format = ", [$symbol($version)]($style)"
@@ -114,6 +122,7 @@ symbol = " "
 
 [kotlin]
 format = ", [$symbol($version)]($style)"
+symbol = " "
 
 [kubernetes]
 format = ", [$symbol$context( \\($namespace\\))]($style)"
@@ -126,16 +135,17 @@ format = ", [$symbol($version)]($style)"
 symbol = " "
 
 [memory_usage]
+disabled = false
 format = ", $symbol[$ram( | $swap)]($style)"
-symbol = " "
+symbol = "󰍛 "
 
 [meson]
 format = ", [$symbol$project]($style)"
-symbol = "喝 "
+symbol = "󰔷 "
 
 [nim]
 format = ", [$symbol($version)]($style)"
-symbol = " "
+symbol = "󰆥 "
 
 [nix_shell]
 format = ", [$symbol$state( \\($name\\))]($style)"
@@ -147,6 +157,7 @@ symbol = " "
 
 [ocaml]
 format = ", [$symbol($version)(\\($switch_indicator$switch_name\\))]($style)"
+symbol = " "
 
 [opa]
 format = ", [$symbol($version)]($style)"
@@ -159,10 +170,12 @@ format = ", [$symbol]($style)"
 disabled = false
 
 [os.symbols]
+Alpaquita = " "
 Alpine = " "
 Amazon = " "
 Android = " "
 Arch = " "
+Artix = " "
 CentOS = " "
 Debian = " "
 DragonFly = " "
@@ -170,11 +183,12 @@ Emscripten = " "
 EndeavourOS = " "
 Fedora = " "
 FreeBSD = " "
-Garuda = "﯑ "
+Garuda = "󰛓 "
 Gentoo = " "
-HardenedBSD = "ﲊ "
-Illumos = " "
+HardenedBSD = "󰞌 "
+Illumos = "󰈸 "
 Linux = " "
+Mabox = " "
 Macos = " "
 Manjaro = " "
 Mariner = " "
@@ -182,29 +196,34 @@ MidnightBSD = " "
 Mint = " "
 NetBSD = " "
 NixOS = " "
-OpenBSD = " "
-OracleLinux = " "
-Pop = " "
+OpenBSD = "󰈺 "
+openSUSE = " "
+OracleLinux = "󰌷 "
+Pop = " "
 Raspbian = " "
-RedHatEnterprise = " "
 Redhat = " "
-Redox = " "
+RedHatEnterprise = " "
+Redox = "󰀘 "
+Solus = "󰠳 "
 SUSE = " "
-Solus = "ﴱ "
 Ubuntu = " "
 Unknown = " "
-Windows = " "
-openSUSE = " "
+Windows = "󰍲 "
 
 [package]
 format = ", [$symbol$version]($style)"
-symbol = " "
+symbol = "󰏗 "
 
 [perl]
 format = ", [$symbol($version)]($style)"
+symbol = " "
 
 [php]
 format = ", [$symbol($version)]($style)"
+symbol = " "
+
+[pijul_channel]
+symbol = " "
 
 [pulumi]
 format = ", [$symbol$stack]($style)"
@@ -224,7 +243,7 @@ format = ", [$symbol($version-$vm_version)]($style)"
 format = ", [$symbol($version)]($style)"
 
 [rlang]
-symbol = "ﳒ "
+symbol = "󰟔 "
 
 [ruby]
 format = ", [$symbol($version)]($style)"
@@ -258,6 +277,7 @@ symbol = "🦸 "
 
 [swift]
 format = ", [$symbol($version)]($style)"
+symbol = " "
 
 [terraform]
 format = ", [$symbol$workspace]($style)"
