--- a/starship.toml
+++ b/starship.toml
@@ -1,3 +1,7 @@
+# ディレクトリはフルパスで表示させたい
+# フルパスだと長すぎることがあるので、2行目はディレクトリだけ表示する
+format = '$all$directory$character'
+
 [aws]
 format = ", [$symbol($profile)(\\($region\\))(\\[$duration)]($style)"
 symbol = "  "
@@ -44,6 +48,9 @@ symbol = " "
 format = ", [$symbol($version)]($style)"
 
 [directory]
+truncation_length = 0
+truncate_to_repo = false
+format = "\n[$path]($style)[$read_only]($read_only_style) "
 read_only = " 󰌾"
 
 [docker_context]
