--- a/starship.toml
+++ b/starship.toml
@@ -118,6 +118,7 @@ symbol = " "
 [hostname]
 ssh_only = false
 ssh_symbol = " "
+format = ", [$ssh_symbol](bold blue)[$hostname]($style)"
 
 [java]
 format = ", [$symbol($version)]($style)"
@@ -266,6 +267,7 @@ symbol = " "
 
 [shell]
 disabled = false
+format = ", [$symbol$shell]($style)"
 
 [shlvl]
 disabled = false
@@ -293,6 +295,7 @@ format = ", [$symbol$workspace]($style)"
 format = ", [$time]($style)"
 
 [username]
+format = "[$user]($style)"
 show_always = true
 
 [vagrant]
