--- a/starship.toml
+++ b/starship.toml
@@ -1,3 +1,7 @@
+# ディレクトリはフルパスで表示させたい
+# フルパスだと長すぎることがあるので、2行目はディレクトリだけ表示する
+format = '$all$directory$character'
+
 [aws]
 format = ", [$symbol($profile)(\\($region\\))(\\[$duration)]($style)"
 symbol = "  "
@@ -31,6 +35,7 @@ symbol = " "
 
 [crystal]
 format = ", [$symbol($version)]($style)"
+symbol = " "
 
 [daml]
 format = ", [$symbol($version)]($style)"
@@ -43,7 +48,10 @@ symbol = " "
 format = ", [$symbol($version)]($style)"
 
 [directory]
-read_only = " "
+truncation_length = 0
+truncate_to_repo = false
+format = "\n[$path]($style)[$read_only]($read_only_style) "
+read_only = " 󰌾"
 
 [docker_context]
 format = ", [$symbol$context]($style)"
@@ -62,6 +70,12 @@ symbol = " "
 
 [erlang]
 format = ", [$symbol($version)]($style)"
+
+[fennel]
+symbol = " "
+
+[fossil_branch]
+symbol = " "
 
 [gcloud]
 format = ", [$symbol$account(@$domain)(\\($region\\))]($style)"
@@ -92,7 +106,7 @@ symbol = " "
 
 [haxe]
 format = ", [$symbol($version)]($style)"
-symbol = "⌘ "
+symbol = " "
 
 [helm]
 format = ", [$symbol($version)]($style)"
@@ -103,6 +117,8 @@ symbol = " "
 
 [hostname]
 ssh_only = false
+ssh_symbol = " "
+format = ", [$ssh_symbol](bold blue)[$hostname]($style)"
 
 [java]
 format = ", [$symbol($version)]($style)"
@@ -114,6 +130,7 @@ symbol = " "
 
 [kotlin]
 format = ", [$symbol($version)]($style)"
+symbol = " "
 
 [kubernetes]
 format = ", [$symbol$context( \\($namespace\\))]($style)"
@@ -126,16 +143,17 @@ format = ", [$symbol($version)]($style)"
 symbol = " "
 
 [memory_usage]
+disabled = false
 format = ", $symbol[$ram( | $swap)]($style)"
-symbol = " "
+symbol = "󰍛 "
 
 [meson]
 format = ", [$symbol$project]($style)"
-symbol = "喝 "
+symbol = "󰔷 "
 
 [nim]
 format = ", [$symbol($version)]($style)"
-symbol = " "
+symbol = "󰆥 "
 
 [nix_shell]
 format = ", [$symbol$state( \\($name\\))]($style)"
@@ -147,6 +165,7 @@ symbol = " "
 
 [ocaml]
 format = ", [$symbol($version)(\\($switch_indicator$switch_name\\))]($style)"
+symbol = " "
 
 [opa]
 format = ", [$symbol($version)]($style)"
@@ -159,10 +178,12 @@ format = ", [$symbol]($style)"
 disabled = false
 
 [os.symbols]
+Alpaquita = " "
 Alpine = " "
 Amazon = " "
 Android = " "
 Arch = " "
+Artix = " "
 CentOS = " "
 Debian = " "
 DragonFly = " "
@@ -170,11 +191,12 @@ Emscripten = " "
 EndeavourOS = " "
 Fedora = " "
 FreeBSD = " "
-Garuda = "﯑ "
+Garuda = "󰛓 "
 Gentoo = " "
-HardenedBSD = "ﲊ "
-Illumos = " "
+HardenedBSD = "󰞌 "
+Illumos = "󰈸 "
 Linux = " "
+Mabox = " "
 Macos = " "
 Manjaro = " "
 Mariner = " "
@@ -182,29 +204,34 @@ MidnightBSD = " "
 Mint = " "
 NetBSD = " "
 NixOS = " "
-OpenBSD = " "
-OracleLinux = " "
-Pop = " "
+OpenBSD = "󰈺 "
+openSUSE = " "
+OracleLinux = "󰌷 "
+Pop = " "
 Raspbian = " "
-RedHatEnterprise = " "
 Redhat = " "
-Redox = " "
+RedHatEnterprise = " "
+Redox = "󰀘 "
+Solus = "󰠳 "
 SUSE = " "
-Solus = "ﴱ "
 Ubuntu = " "
 Unknown = " "
-Windows = " "
-openSUSE = " "
+Windows = "󰍲 "
 
 [package]
 format = ", [$symbol$version]($style)"
-symbol = " "
+symbol = "󰏗 "
 
 [perl]
 format = ", [$symbol($version)]($style)"
+symbol = " "
 
 [php]
 format = ", [$symbol($version)]($style)"
+symbol = " "
+
+[pijul_channel]
+symbol = " "
 
 [pulumi]
 format = ", [$symbol$stack]($style)"
@@ -224,7 +251,7 @@ format = ", [$symbol($version-$vm_version)]($style)"
 format = ", [$symbol($version)]($style)"
 
 [rlang]
-symbol = "ﳒ "
+symbol = "󰟔 "
 
 [ruby]
 format = ", [$symbol($version)]($style)"
@@ -240,6 +267,7 @@ symbol = " "
 
 [shell]
 disabled = false
+format = ", [$symbol$shell]($style)"
 
 [shlvl]
 disabled = false
@@ -258,6 +286,7 @@ symbol = "🦸 "
 
 [swift]
 format = ", [$symbol($version)]($style)"
+symbol = " "
 
 [terraform]
 format = ", [$symbol$workspace]($style)"
@@ -266,6 +295,7 @@ format = ", [$symbol$workspace]($style)"
 format = ", [$time]($style)"
 
 [username]
+format = "[$user]($style)"
 show_always = true
 
 [vagrant]
