--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,10 @@
     "editor.formatOnSave": false,
     "editor.formatOnType": false
   },
+  "[properties]": {
+    // 今のところpropertiesファイルは.gitconfigのみで、.gitconfigにはフォーマッターがないので無効にしておく
+    "editor.formatOnSave": false
+  },
   "editor.formatOnSave": true,
   "editor.formatOnType": true,
   "files.encoding": "utf8"
